fix-admin-panel

--- a/web/css/pages/index.css
+++ b/web/css/pages/index.css
@@ -284,6 +284,7 @@ h1 span:last-child::before {
 
 .feedback-form {
     margin-top: 140px;
+    padding-bottom: 140px;
 }
 
 .feedback-form .container {
