--- a/web/css/layout/main-footer.css
+++ b/web/css/layout/main-footer.css
@@ -1,7 +1,7 @@
 .main-footer {
     width: 100%;
     height: 100%;
-    margin-top: 140px;
+    /*margin-top: 140px;*/
     padding-top: 50px;
     border-radius: 20px 20px 0 0;
     background-color: #282828;
@@ -84,10 +84,11 @@
 .main-footer .inner-container .row .admin-info {
     position: absolute;
     top: 0;
-    left: 78%;
+    right: 0;
     background-color: gray;
     border-radius: 5px;
     padding: 5px;
+    text-decoration: none;
 }
 
 .main-footer .inner-container .row .admin-info p {
