--- a/web/css/pages/form.css
+++ b/web/css/pages/form.css
@@ -1,66 +1,64 @@
-.form {
-    width: 300px;
-    padding: 32px;
-    border-radius: 10px;
-    box-shadow: 0 4px 16px #ccc;
-    font-family: sans-serif;
-    letter-spacing: 1px;
-}
-
-.form_input,
-.form_button {
-    font-family: sans-serif;
-    letter-spacing: 1px;
-    font-size: 16px;
-}
-
-.form_title {
-    text-align: center;
-    margin: 0 0 32px 0;
-    font-weight: normal;
+.form_container {
+    padding-bottom: 140px;
 }
 
 .form_group {
     position: relative;
-    margin-bottom: 32px;
-}
-
-.form_label {
-    position: absolute;
-    left: 0;
-    top: -18px;
-    font-size: 12px;
-    z-index: -1;
-    color: #9e9e9e;
-    transition: 0.3s;
+    margin-bottom: 20px;
 }
 
 .form_input {
-    width: 100%;
-    padding: 0 0 10px 0;
-    border: none;
-    border-bottom: 1px solid #e0e0e0;
+    width: 740px;
+    height: 60px;
+    border-radius: 10px;
+    border: 1px solid #000;
     background-color: transparent;
-    outline: none;
-    transition: 0.3s;
-}
-
-.form_input:focus {
-    border-bottom: 1px solid #1a73a8;
+    padding-left: 20px;
+    font-size: 17px;
 }
 
 .form_button {
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    color: #fff;
+    margin: 0 auto;
+    width: 740px;
+    padding: 20px 0;
     background-color: #3341F1;
-    outline: none;
-    cursor: pointer;
-    transition: 0.3s;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 8px;
+    border: 1px solid #3341F1;
+    margin-top: 10px;
+    font-family: Inter;
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    text-transform: uppercase;
+    transition: 250ms;
 }
 
-.form_button:focus,
+.error_form {
+    font-family: Inter;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #FF0000;
+    margin-top: 5px;
+}
+
 .form_button:hover {
-    background-color: rgba(0, 113, 240, 0.7);
+    background-color: transparent;
+    border: 1px solid #3341F1;
+    color: #3341F1;
+    cursor: pointer;
+}
+
+.h1-form {
+    color: #282828;
+    font-family: "NeutralFace";
+    font-size: 75px;
+    font-style: normal;
+    font-weight: 700;
+    margin-bottom: 20px;
 }
