--- a/web/css/pages/activity.css
+++ b/web/css/pages/activity.css
@@ -3,6 +3,10 @@ main {
     flex-direction: column;
 }
 
+.activities {
+    padding-bottom: 140px;
+}
+
 .activities h1 {
     color: #282828;
     font-family: "NeutralFace";
