--- a/web/css/pages/index.css
+++ b/web/css/pages/index.css
@@ -18,7 +18,7 @@
     background-position: center 350px;
 }
 
-h1 {
+.intro h1 {
     display: flex;
     flex-direction: column;
     margin-top: 85px;
