Add Vacancy, Vacancy-page, Create-vacancy actions

--- a/web/css/pages/events.css
+++ b/web/css/pages/events.css
@@ -3,7 +3,10 @@ main {
     flex-direction: column;
 }
 
+
+
 .events {
+    margin-top: 140px;
     padding-bottom: 140px;
 }
 
@@ -86,6 +89,7 @@ main {
 .card-body {
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
 }
 
 .events .event-list-item b {
